--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -7,7 +7,7 @@ and open the template in the editor.
     Created on : Apr 1, 2021, 7:29:42 PM
     Author     : Σταθης Καράμπελας
 */
-body{
+body,html{
     margin:0 0;
 }
 .navbar-nav {
