--- a/src/main/webapp/WEB-INF/views/frontmatter.jspf
+++ b/src/main/webapp/WEB-INF/views/frontmatter.jspf
@@ -1,8 +1,8 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
 <section id="frontmatter">
-    <div style="text-align: center">
-        <h1>FRONTMATTER!!!</h1>
+    <div >
+        <h1 style="text-align: center">FRONTMATTER!!!</h1>
         
         <!--Book of the month -->
         
