--- a/src/main/resources/static/css/specificBook.css
+++ b/src/main/resources/static/css/specificBook.css
@@ -100,3 +100,7 @@ body {
             font-color: green;
     }
 
+    p { 
+        font-size: 14px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
