--- a/src/main/webapp/WEB-INF/views/frontmatter.jspf
+++ b/src/main/webapp/WEB-INF/views/frontmatter.jspf
@@ -1,13 +1,265 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
-<section id="frontmatter">
-    <div >
-        <h1 style="text-align: center">FRONTMATTER!!!</h1>
-        
-        <!--Book of the month -->
-        
-        <!--Best Sellers-->
+<div class="frontmatter">
 
-        <!-- κλπκλπ -->
+        <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./css/styles2.css" />
+        <link rel="stylesheet" href="./css/multipleItemsCarousel.css"/>
+        <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+        
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <!-- Latest compiled and minified CSS -->
+      <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous"
+      />
+
+      <!-- Optional theme -->
+      <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous"
+      />
+
+      <!-- Latest compiled and minified JavaScript -->
+      <script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"
+      ></script>
+
+        
+         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ 
+     
+   
+    
+
+    
+    
+    
+    
+    
+    
+    
+    <!-- Carousel with 3 categories -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="./images/Batman-etc.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="./images/MentalHealth.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="./images/SportsAndOutdoor.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div> 
+    <hr>
+    
+     <!-- book of the month -->
+ <section id="bookOfTheMonth">
+   <div id="bookMonthDiv">
+    <div class="row">
+      <div class="col-4">
+        <img id="monthBookImage" src="" alt="aaa">
+      </div>
+      <div class="col-7 bookMonthCol">
+        <h2>book of the month</h2>
+        <h6></h6>
+
+        <p id="bookMonthColText"> 
+        </p>
+
+        <div>
+            <a href="/bookstore/books/search/">Find Out More&gt;&gt;</a>
+        </div>
+      </div>
     </div>
+   </div>
+     </section>
+     
+     
+     <!-- Readers choice New and Upcoming -->
+<section id="ReadersChoice">
+  <div class="row">
+    <div class="col-4">
+      <hr>
+    </div>
+    <div class="col-4">
+      <span>Reader's choice:New and Upcoming</span><span id="verticalLine"></span> <a href="">See all</a>
+    </div>
+    <div class="col-4">
+      <hr>
+    </div>
+  </div>
+
 </section>
+     
+     
+     
+     <!-- new books and upcoming -->
+     <section id="upcomingBooks">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="carousel slide multi-item-carousel" id="theCarousel">
+          <div class="carousel-inner">
+            <div class="item active">
+              <div class="col-xs-4">
+                <a href="#1"><img src="./images/MentalHealth.jpg" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="./images/NewBooks.jpg" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="./images/SportsAndOutdoor.jpg" class="img-responsive"></a>
+              </div></div>
+            <div class="item">
+              <div class="col-xs-4">
+                <a href="#1"><img src="./images/NewBooks.jpg" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="./images/SportsAndOutdoor.jpg" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/673ab7/000000" class="img-responsive"></a>
+              </div></div>
+            <div class="item">
+              <div class="col-xs-4">
+                <a href="#1"><img src="./images/SportsAndOutdoor.jpg" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/673ab7/000000" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/4caf50/000000" class="img-responsive"></a>
+              </div></div>
+            <div class="item">
+              <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/673ab7/000000" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/4caf50/000000" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a>
+              </div></div>
+            <div class="item">
+              <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/4caf50/000000" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a>
+              </div></div>
+            <div class="item">
+              <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="./images/MentalHealth.jpg" class="img-responsive"></a>
+              </div></div>
+            <!-- add  more items here -->
+            <!-- Example item start:  -->
+
+            <div class="item">
+              <div class="col-xs-4">
+                <a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a>
+              </div>
+            <div class="col-xs-4">
+                <a href="#1"><img src="./images/MentalHealth.jpg" class="img-responsive"></a>
+              </div><div class="col-xs-4">
+                <a href="#1"><img src="./images/NewBooks.jpg" class="img-responsive"></a>
+              </div></div>
+
+            <!--  Example item end -->
+          </div>
+          <a class="left carousel-control" href="#theCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a class="right carousel-control" href="#theCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+     </section>
+
+    
+    
+    
+    <!--author of the month-->
+   <section id="authorOfTheMonth">
+  <div id="authorMonthDiv">
+   <div class="row">
+     <div class="col-4">
+       <img id="monthauthorImage" src="./images/bookLogo.png" alt="aaa">
+     </div>
+     <div class="col-7 authorMonthCol">
+       <h2>author of the month</h2>
+       <h6>  </h6>
+
+       <p id="authorMonthColText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+       </p>
+        <div>
+            <a href="/bookstore/authors/">Find Out More about &gt;&gt;</a>
+        </div>
+     
+      
+
+
+       
+     </div>
+   </div>
+  </div>
+  
+
+</section>
+
+    
+</div>
+    
+    
+    
+    
+ 
+ 
+           
+ 
+      
+        <script src="./javascript/javascript1.js"></script>
+ 
+    
+      
+       
+      
+    
+        
+    
+              
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
