--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -295,7 +295,16 @@ body {
         <div id="cart">
             <div id="cart-img">
             </div>
-            <div id="cart-amount">${sessionScope.cart.size()}​​​​​​​</div>
+             <% int cartAmount = 0; %>
+              <c:forEach var="cartitem" items="${sessionScope.cart}">
+                  
+                       <c:set var="item" value="${cartitem.quantity}"></c:set>
+
+                <% cartAmount = cartAmount + (int) pageContext.getAttribute("item");  %>
+                  
+              </c:forEach>
+              
+             <div id="cart-amount"><%=cartAmount%>​​​​​​​</div>
             <a href="${pageContext.request.contextPath}/cart/index">Cart</a>
         </div></div>           
     </div>
