--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -12,7 +12,7 @@ body {
     margin: 0 auto !important;
     
 }
-#main-header header{
+header{
      box-sizing: content-box !important;
 }
 
@@ -27,14 +27,14 @@ body {
     right: 0px;
 }   
 
-#main-header #top-container {
+#top-container {
     height: 120px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
     
-#main-header #logo {
+#logo {
     display: flex;
 	/* ; */
 	cursor: pointer;
@@ -47,19 +47,20 @@ body {
         height: 60px;
 } 
 
-#main-header #search {
+#search {
 
 	display: flex;
-	position: relative;
+	position: absolute;
 	/*! margin: 0 20px; */
 	/* padding-top: 20px; */
 	top: 50px;
 	height: 60px;
 	width: 450px;
-	float: left;	font-size: 16pt;
+	/*! float: left; */	font-size: 16pt;
+	left: 400px;
 }
 
-#main-header #searchBar {
+#searchBar {
 	/* position: relative; */
 	display: inline-flex;
 	/* width: 200px; */
@@ -69,14 +70,12 @@ body {
 	/* left: 100px; */
 	/* top: 15px; */
 }
+
 #searchField {
  font-size: 16px;
 }
-    
-
-    
- 
-#main-header    #searchBar #searchBox input[type="submit"] {
+   
+#searchBar #searchBox input[type="submit"] {
 	display: flex;
 	flex: 0 0 40px;
 	position: relative;
@@ -101,93 +100,124 @@ body {
 	font-size: 0;
     }
     
-#main-header #account-checkbox, .myAccount {
+#account-checkbox {
         left: 3%;
-	top: 20px;
-	position: relative;
-        height: 50px;
+	bottom: 30px;
+	/*! position: relative; */
+        height: 40px;
         
-	padding-bottom: 5px;
 	background-color: white;
 	border: none;
 	border-bottom: 3px solid #2794ad;
 	font-size: 14pt;
+        height: 30px;
 }
 
+.myAccount {
+    /*! display: flex; */
+    position: absolute;
+    height: 50px;
+    top: 70px;
+    left: 930px;
+}
 .myAccount p {
     font-family: "Georgia", serif;
     font-style: oblique;
     font-size: 12pt;
     border: none;
-    top: 10px
+    bottom: 39px;
+    position: absolute;
+    width: max-content;
 }
-#main-header    .myAccount-modal {
+.myAccount-modal {
         position: relative;
         display: inline-block;
         left: 350px;
         top: 20px;
     }
     
-#main-header    #my-account-menu li {
-        color: #2794ad;
-        font-size: 14pt;
-        text-decoration: none;
-    }
-    
-#main-header    #login-modal {
+#my-account-menu {
+ padding: 15px;
+}
+
+#login-modal {
 	position: absolute;
 	font-family: Helvetica, Arial, sans-serif;
 	z-index: 10;
-	height: 150px;
-	/* width: 200px; */
+	height: auto;
+	width: 200px;
 	background-color: white;
 	color: #2794ad;
 	display: none;
 	border-radius: 5px;
 	border: 1px solid #cccccc;
-	right: 250px;
+	right: 120px;
 	top: 120px;
 	/* width: min-content; */        font-size: 14pt;
         text-decoration: none;
-}      
+	text-align: start;
+	box-shadow: 3px 3px 12px lightgrey;
+}     
+#command {
+ display: grid;
+ background: none;
+ /*! color: beige; */
+}
 
-#main-header #cart {
+#cart {
 	position: relative;
 	display: block;
 	color: black;
-	top: 22px;
+	top: 18px;
 	cursor: pointer;
 	/* margin-left: 40px; */
-	/* height: 120px; */
-	/* width: 120px; */
+	height: 80px;
+	width: 80px;
 }
 
-#main-header #cart-img {
+#cart-img {
 	background-image: url("basket.optimized.svg");
 	background-size: 130px 110px;
 	background-repeat: no-repeat;
 	width: 130px;
 	height: 110px;
-	top: 20px;
+	/*! top: 20px; */
 	position: relative;
 }
 
-#main-header #cart-amount {        
+#cart-amount {        
     position: relative;
-    top: -74px;
-    left: 79px;
+    top: 34px;
+    left: 31px;
+    width: min-content;
+    z-index: 2;
 }
         
-#main-header #cart a {
-	top: 10px;
-        left: 36px;
+#cart a {
+	/*! bottom: 200px; */
+        /*! left: 36px; */
 	position: relative;
         text-decoration: none;
         color: black;
+        display: block;
+	width: 111px;
+	height: 65px;
 }   
     
-    
-    
+.clickable {
+ height: 80px;
+ width: 80px;
+ right: 50px;
+ position: relative;
+}
+  
+
+.clickable p {  
+	margin: 0;
+	width: min-content;
+	position: relative;
+	left: 32px;
+}
 
 </style>
 
@@ -246,7 +276,7 @@ body {
                         </li>
                         <li>
                             <a href="${pageContext.request.contextPath}/admin">Administrator Management Page</a>
-                    `   </li>
+                        </li>
                         <li>
                             <form:form action="${pageContext.request.contextPath}/logout" method="POST">
                                 <input type="submit" value="Logout">
@@ -293,8 +323,6 @@ body {
   
                   
         <div id="cart">
-            <div id="cart-img">
-            </div>
              <% int cartAmount = 0; %>
               <c:forEach var="cartitem" items="${sessionScope.cart}">
                   
@@ -304,9 +332,12 @@ body {
                   
               </c:forEach>
               
-             <div id="cart-amount"><%=cartAmount%>​​​​​​​</div>
-            <a href="${pageContext.request.contextPath}/cart/index">Cart</a>
-        </div></div>           
+             <div id="cart-amount"><%=cartAmount%>0​​​​​​​</div>
+             <div class="clickable">
+            <a id="cart-img" href="${pageContext.request.contextPath}/cart/index"></a>
+            <p>Cart</p>
+            </div>  
+        </div>         
     </div>
 
 
