Changed to flex this time...

--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -6,14 +6,11 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
-html,
-body { 
-    width: 1182px !important;
-    margin: 0 auto !important;
-    
-}
+
 header{
-     box-sizing: content-box !important;
+     box-sizing: content-box ;    
+     width: 1182px ; 
+     margin: 0 auto ;
 }
 
 #top-box {
@@ -29,35 +26,39 @@ header{
 
 #top-container {
     height: 120px;
-    display: flex;
-    flex-wrap: wrap;
+    display: inline-flex;
+    /*! flex-wrap: wrap; */
     justify-content: space-between;
+    width: 1182px;
+    top: 50px;
+    position: relative;
 }
     
 #logo {
-    display: flex;
 	/* ; */
 	cursor: pointer;
-	/* display: inline-block; */
-	/* display: inline-flex; */
 	position: relative;
-	top: 50px;
+	/*! top: 50px; */
 	/* left: 60px; */
 	margin-left: 20px;
         height: 60px;
-} 
+	flex-basis: 350px;
+	flex: 1 1 350px;
+}
 
 #search {
 
-	display: flex;
-	position: absolute;
+	display: inline-flex;
+	/*! position: sticky; */
 	/*! margin: 0 20px; */
 	/* padding-top: 20px; */
 	top: 50px;
 	height: 60px;
-	width: 450px;
-	/*! float: left; */	font-size: 16pt;
-	left: 400px;
+	/*! width: 450px; */
+	/*! float: right; */	font-size: 16pt;
+	left: 40px;
+	flex-basis: 250px;
+	flex: 1 1 min-content;
 }
 
 #searchBar {
@@ -115,10 +116,11 @@ header{
 
 .myAccount {
     /*! display: flex; */
-    position: absolute;
-    height: 50px;
+    /*! position: absolute; */
+    /*! height: 50px; */
     top: 70px;
-    left: 930px;
+    left: 70%;
+    flex: 1 1 max-content;
 }
 .myAccount p {
     font-family: "Georgia", serif;
@@ -148,7 +150,7 @@ header{
 	width: 200px;
 	background-color: white;
 	color: #2794ad;
-	display: none;
+	/*! display: none; */
 	border-radius: 5px;
 	border: 1px solid #cccccc;
 	right: 120px;
@@ -168,11 +170,14 @@ header{
 	position: relative;
 	display: block;
 	color: black;
-	top: 18px;
+	/*! top: 18px; */
 	cursor: pointer;
 	/* margin-left: 40px; */
 	height: 80px;
 	width: 80px;
+	flex: 1 1 max-content;
+	left: 30px;
+	bottom: 20px;
 }
 
 #cart-img {
